# wsm-project1

./: .gitignore  README.md  main.py  problem1.py  problem2.py  problem3.py  problem4.py  pyproject.toml  sample.out
util/: vectorspace.py
