[tool.poetry]
name = "project1"
version = "0.1.0"
description = ""
authors = ["GINTOAHC <chaotingchen10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nltk = "^3.9.1"
jieba = "^0.42.1"
numpy = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
